Terraform/notes/01_One-VPC-creation.tf
# Resource-1
# create a custom vpc
resource "google_compute_network" "vpc1" {
name = "custom-vpc-tf"
auto_create_subnetworks = false
}
